--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   },
   "scripts": {
     "start": "node .",
-    "dev": "set NODE_ENV=development&& nodemon .",
-    "prod": "set NODE_ENV=production&& nodemon .",
+    "dev": "nodemon .",
     "debug": "nodemon --inspect ."
   },
   "author": "",
