--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.1",
     "gridfs-stream": "^1.1.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "mongoose-findorcreate": "^3.0.0",
@@ -21,8 +23,7 @@
     "nodemailer-html-to-text": "^3.2.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
-    "path": "^0.12.7"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
