--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.10.1",
     "gridfs-stream": "^1.1.1",
-    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "mongoose-findorcreate": "^3.0.0",
@@ -23,7 +22,9 @@
     "nodemailer-html-to-text": "^3.2.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "path": "^0.12.7",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
