--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.10.1",
     "gridfs-stream": "^1.1.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "mongoose-findorcreate": "^3.0.0",
