add payment and zoom , modify some endpoints , fix some errors

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Final Project",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "cors": "^2.8.5",
@@ -26,7 +27,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "stripe": "^8.156.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
